--- a/static/style.css
+++ b/static/style.css
@@ -83,9 +83,16 @@ body {
     color: #c02d00;
 }
 
+#blogs li {
+    padding-left: 25px;
+    padding-bottom: 15px;
+}
+
 h1 {
+    position: relative;
     font-family: 'Bungee', sans-serif;
     font-size: 100px;
+    z-index: -1;
 }
 
 h2 {
@@ -123,7 +130,14 @@ label {
 
 input[type=text] {
     width: 100%;
-    padding: 15px;
+    padding: 5px;
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 17px;
+}
+
+input[type=password] {
+    width: 100%;
+    padding: 5px;
     font-family: 'Nanum Myeongjo', serif;
     font-size: 17px;
 }
@@ -166,7 +180,9 @@ a:visited {
 }
 
 p {
+    padding-top: 15px;
     padding-left: 15px;
+    padding-bottom: 25px;
 }
 
 .error {
